--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -41894,5 +41894,77 @@
         "published": "Tue, 06 Jan 2026 09:55:30 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"The government is reportedly considering extension of four-year tax deferral on ESOPs to all the startups recognised by the DPIIT\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/stakcbox-funding-featured-1-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />With the Union Budget 2026-27 around the corner, the government is reportedly considering extension of four-year"
+    },
+    {
+        "id": "https://www.theverge.com/tech/856149/microsoft-365-office-rebrand-copilot",
+        "title": "No,\u00a0Microsoft\u00a0didn\u2019t\u00a0rebrand Office to\u00a0Microsoft\u00a0365 Copilot",
+        "link": "https://www.theverge.com/tech/856149/microsoft-365-office-rebrand-copilot",
+        "published": "2026-01-06T05:48:29-05:00",
+        "source": "The Verge",
+        "summary": "Microsoft has got the internet confused, again. Over the past couple of days posts on Reddit, Hacker News, and X have claimed Microsoft has rebranded Microsoft Office to Microsoft 365 Copilot. As much as Microsoft loves to shove its Copilot branding everywhere, Office hasn't been renamed to \"Microsoft 365 Copilot app.\" The confusion comes from [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/gallery/the-best-tablets/",
+        "title": "13 Best Tablets (2026), Tested and Reviewed",
+        "link": "https://www.wired.com/gallery/the-best-tablets/",
+        "published": "Tue, 06 Jan 2026 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "We\u2019ve tested all the top slates, from Apple\u2019s iPads to Android and Windows devices, and rounded up our favorites."
+    },
+    {
+        "id": "https://www.wired.com/story/best-gym-bags/",
+        "title": "6 Best Gym Bags for Every Workout and Commute (2026)",
+        "link": "https://www.wired.com/story/best-gym-bags/",
+        "published": "Tue, 06 Jan 2026 10:30:00 +0000",
+        "source": "WIRED",
+        "summary": "New year, new gym bag. I put over 20 models to the test in 2025 so you can start 2026 with the best."
+    },
+    {
+        "id": "https://www.technologyreview.com/2026/01/06/1129737/autonomous-warfare-europe-drones-defense-automated-kill-chains/",
+        "title": "Europe\u2019s drone-filled vision for the future of war",
+        "link": "https://www.technologyreview.com/2026/01/06/1129737/autonomous-warfare-europe-drones-defense-automated-kill-chains/",
+        "published": "Tue, 06 Jan 2026 11:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Last spring, 3,000 British soldiers of the 4th Light Brigade, also known as the Black Rats, descended upon the damp forests of Estonia\u2019s eastern territories. They had rushed in from Yorkshire by air, sea, rail, and road. Once there, the Rats joined 14,000 other troops at the front line, dug in, and waited for the&#8230;"
+    },
+    {
+        "id": "https://scenelist.org/",
+        "title": "SCiZE's Classic Warez Collection",
+        "link": "https://scenelist.org/",
+        "published": "Tue, 06 Jan 2026 10:13:43 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46510625\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/the-most-interesting-health-tech-ive-seen-at-ces-2026-so-far/",
+        "title": "The most interesting health and wellness tech I've seen at CES 2026 so far",
+        "link": "https://www.zdnet.com/article/the-most-interesting-health-tech-ive-seen-at-ces-2026-so-far/",
+        "published": "Tue, 06 Jan 2026 10:32:08 GMT",
+        "source": "Latest news",
+        "summary": "I'm already seeing some wacky tech and health wearables on display ahead of CES 2026."
+    },
+    {
+        "id": "https://inc42.com/buzz/suprdaily-cofounder-puneet-kumar-quits-nexus-venture-to-launch-new-startup/",
+        "title": "SuprDaily Cofounder Puneet Kumar Quits Nexus Venture To Launch New Startup",
+        "link": "https://inc42.com/buzz/suprdaily-cofounder-puneet-kumar-quits-nexus-venture-to-launch-new-startup/",
+        "published": "Tue, 06 Jan 2026 10:54:11 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Y Combinator\u2019s Puneet Kumar Joins VC Firm Nexus Venture Partners\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2024/05/Hero-83.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />SuprDaily cofounder Puneet Kumar has exited VC firm Nexus Venture Partners less than two years after joining the firm in&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-meta-playbook-delay-action-scam-ads-internal-documents/",
+        "title": "Meta Used \u2018Playbook\u2019 To Delay Action On Scam Ads, Internal Documents Reveal",
+        "link": "https://www.medianama.com/2026/01/223-meta-playbook-delay-action-scam-ads-internal-documents/",
+        "published": "Tue, 06 Jan 2026 11:03:21 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Meta used an internal playbook to delay enforcement action on scam ads worldwide, internal documents that Reuters accessed have revealed.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-meta-playbook-delay-action-scam-ads-internal-documents/\">Meta Used \u2018Playbook\u2019 To Delay Action On Scam Ads, Internal Documents Reveal</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-universal-music-30-stake-excel-entertainment/",
+        "title": "Universal Music Acquires 30% Stake  in Excel Entertainment, Gets Global Distribution Rights",
+        "link": "https://www.medianama.com/2026/01/223-universal-music-30-stake-excel-entertainment/",
+        "published": "Tue, 06 Jan 2026 10:28:14 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>After Maddock Films, Universal Music has invested in another Indian company, Excel Entertainment, to get distribution rights to their music and the formation of a new music label. </p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-universal-music-30-stake-excel-entertainment/\">Universal Music Acquires 30% Stake  in Excel Entertainment, Gets Global Distribution Rights</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
