📚 Auto-update: News data refreshed - 2026-01-06 13:31 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -42070,5 +42070,181 @@
         "published": "Tue, 06 Jan 2026 12:09:45 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>Jammu and Kashmir has enforced a two-month ban on VPN services, prompting police to conduct street-level mobile phone checks across the Union Territory. FIRs have been registered against alleged violators.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-jammu-kashmir-vpn-ban-search-phones/\">VPN Ban in Jammu and Kashmir Leads to Street-Level Phone Checks and FIRs</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.theverge.com/tech/846789/ugree-syncare-indoor-outdoor-cameras-ai-doorbell",
+        "title": "Ugreen is expanding into AI-powered smart home surveillance",
+        "link": "https://www.theverge.com/tech/846789/ugree-syncare-indoor-outdoor-cameras-ai-doorbell",
+        "published": "2026-01-06T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Ugreen announced at CES 2026 that it'll be branching into smart home territory with the launch of its SynCare product line of cameras. The series will consist of two indoor cams, the ID500 Pro and ID500 Plus, the OD600 Pro outdoor cam, and the Video Doorbell DB600 Pro. All of this gear will launch in [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/851622/chamberlain-myq-secure-view-smart-lock-ces-2026",
+        "title": "Chamberlain\u2019s new smart lock will lock your door and shut your garage upon spotting a stranger",
+        "link": "https://www.theverge.com/news/851622/chamberlain-myq-secure-view-smart-lock-ces-2026",
+        "published": "2026-01-06T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Chamberlain is expanding its closed smart home ecosystem with a new lock that doubles as a 2K HDR video doorbell. Announced at CES 2026, the myQ Secure View 3-in-1 Smart Lock costs $279.99 and uses face detection to automatically lock or unlock your door depending on who's approaching. For this to work, you and your [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/852453/ugreen-ai-nas-idx6011-pro-photo-search",
+        "title": "Ugreen is now selling an AI NAS with more RAM than my desktop",
+        "link": "https://www.theverge.com/gadgets/852453/ugreen-ai-nas-idx6011-pro-photo-search",
+        "published": "2026-01-06T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "A decade ago, Google Photos changed photo storage for me forever - because I could search for those photos just by typing a few words. But that meant trusting Google cloud servers with my precious memories. Now, a new breed of network-attached storage (NAS) boxes promises to do the same and more with local AI, [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/854886/corsair-galleon-100-sd-elgato-stream-deck-specs-price-launch",
+        "title": "Corsair fit a whole Stream Deck into its new gaming keyboard",
+        "link": "https://www.theverge.com/tech/854886/corsair-galleon-100-sd-elgato-stream-deck-specs-price-launch",
+        "published": "2026-01-06T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Elgato's Stream Deck has come full circle. Almost eight years after the company picked up the pieces of Art Lebedev's ambitious Optimus keyboard and went in a different, cheaper direction with the idea, we're going back to keyboards. Corsair's Galleon 100 SD, announced at CES 2026, is a wired mechanical keyboard that effectively has a [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/855025/segway-e-bikes-myon-muxi-xaber-300-ces-2026",
+        "title": "Segway\u2019s new e-bikes are impressively high-tech and delightfully low-cost",
+        "link": "https://www.theverge.com/news/855025/segway-e-bikes-myon-muxi-xaber-300-ces-2026",
+        "published": "2026-01-06T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "After causing a splash at last year's CES with a pair of high-tech, high-powered e-bikes, Segway returned to the show with a little something more for everyone. The Ninebot-owned brand announced two new e-bikes - the seemingly conventional-looking Myon, and the low-step, short-tail Muxi - as well as a sharp-looking electric dirt bike called the [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/space/2026/01/a-private-equity-deal-reviving-rocketdyne-seems-more-like-a-corporate-breakup/",
+        "title": "Private equity deal shows just how far America\u2019s legacy rocket industry has fallen",
+        "link": "https://arstechnica.com/space/2026/01/a-private-equity-deal-reviving-rocketdyne-seems-more-like-a-corporate-breakup/",
+        "published": "Tue, 06 Jan 2026 12:15:31 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "After peaking in the Cold War, the relic of Rocketdyne has changed ownership four times in 20 years."
+    },
+    {
+        "id": "https://www.engadget.com/home/smart-home/segways-navimow-brand-unveiled-a-new-line-of-robotic-lawn-mowers-at-ces-2026-130007014.html?src=rss",
+        "title": "Segway's Navimow brand unveiled a new line of robotic lawn mowers at CES 2026",
+        "link": "https://www.engadget.com/home/smart-home/segways-navimow-brand-unveiled-a-new-line-of-robotic-lawn-mowers-at-ces-2026-130007014.html?src=rss",
+        "published": "Tue, 06 Jan 2026 13:00:07 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Segway, the maker of Steve Wozniak's <a href=\"https://www.forbes.com/2009/09/30/wozniak-apple-polo-lifestyle-sport-segway-polo.html\"><ins>favorite mode</ins></a> of self-balancing transport, has released a new series of robotic lawn mowers under its Navimow brand, designed for all manner of Roomba-esque mowing action. The lineup includes four residential series and was unveiled at CES 2026.</p>\n<p>Navimow's lineup includes the flagship X4 Series for large yards up to 1.5 acres in size. Its AW"
+    },
+    {
+        "id": "https://www.engadget.com/wearables/ugreen-launches-a-smart-home-security-platform-at-ces-130000389.html?src=rss",
+        "title": "Ugreen launches a smart home security platform at CES",
+        "link": "https://www.engadget.com/wearables/ugreen-launches-a-smart-home-security-platform-at-ces-130000389.html?src=rss",
+        "published": "Tue, 06 Jan 2026 13:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a class=\"link\" href=\"https://www.engadget.com/computing/accessories/best-wireless-charger-140036359.html\" target=\"_blank\">Ugreen</a> makes plenty of things, but you\u2019re probably familiar with the name in the context of its NAS systems (should that be NASes? Who knows). Naturally, the company has turned up to CES 2026 with the former, but it\u2019s also branching out into home security. It\u2019s announcing SynCare, an AI infused all-in-one surveillance platform which, it rather boldly claims, will beco"
+    },
+    {
+        "id": "https://www.engadget.com/transportation/segway-launches-two-more-e-bikes-at-ces-130000152.html?src=rss",
+        "title": "Segway launches two more e-bikes at CES",
+        "link": "https://www.engadget.com/transportation/segway-launches-two-more-e-bikes-at-ces-130000152.html?src=rss",
+        "published": "Tue, 06 Jan 2026 13:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>I\u2019m no psychologist, but I get a sense Segway turned up to CES 2026 with something to prove after last year. Certainly, it\u2019s gone out of its way to prove its micromobility bona fides with the press, who perhaps were a bit too sniffy that <a class=\"link\" href=\"https://www.engadget.com/transportation/segway-is-finally-launching-e-bikes-at-ces-2025-130015667.html\" target=\"_blank\">scooter people were launching an e-bike.</a> This year, Segway\u2019s not just launching two more mainstream e-bikes, but "
+    },
+    {
+        "id": "https://www.engadget.com/home/smart-home/birdbuddys-new-smart-bird-feeder-can-id-birds-by-their-songs-122000692.html?src=rss",
+        "title": "Birdbuddy's new smart bird feeder can ID birds by their songs",
+        "link": "https://www.engadget.com/home/smart-home/birdbuddys-new-smart-bird-feeder-can-id-birds-by-their-songs-122000692.html?src=rss",
+        "published": "Tue, 06 Jan 2026 12:20:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>I\u2019m seeing a ton of smart bird feeders <a class=\"link\" href=\"https://www.engadget.com/bird-buddy-smart-hummingbird-feeder-120012286.html\" target=\"_blank\">again</a> this year <a class=\"link\" href=\"https://www.engadget.com/ces-2026-live-updates-from-techs-biggest-conference-in-las-vegas-153146838.html?guccounter=1&amp;guce_referrer=aHR0cHM6Ly93d3cuZW5nYWRnZXQuY29tLw&amp;guce_referrer_sig=AQAAABXCoIiT7WZOIxDxH-DQgZmdjVANBM7hcMi5214CK4PHcMhkCfyyZDDW-fRTcWmBUhG7IsyyYJl9WYSGZD1njXMVci3tfqkCLz_TkMtB"
+    },
+    {
+        "id": "https://sqlite.org/whyc.html",
+        "title": "C Is Best",
+        "link": "https://sqlite.org/whyc.html",
+        "published": "Tue, 06 Jan 2026 12:33:54 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46511470\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/chubbycable-tri-flex-3-in-1-usb-c-cable-review/",
+        "title": "This 3-in-1 USB-C cable is the one thing I refuse to travel without now - here's why",
+        "link": "https://www.zdnet.com/article/chubbycable-tri-flex-3-in-1-usb-c-cable-review/",
+        "published": "Tue, 06 Jan 2026 13:29:00 GMT",
+        "source": "Latest news",
+        "summary": "With one cable, I can charge my iPhone, Apple Watch, AirPods, and another device - without worry."
+    },
+    {
+        "id": "https://www.zdnet.com/article/linux-2026-top-distros/",
+        "title": "The 6 Linux distros I expect to rule 2026 - and why",
+        "link": "https://www.zdnet.com/article/linux-2026-top-distros/",
+        "published": "Tue, 06 Jan 2026 12:53:48 GMT",
+        "source": "Latest news",
+        "summary": "Which Linux distributions will rise above the competition in 2026 to dethrone the old guard? These are my picks."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/india-emerges-as-global-leader-in-genai-adoption-for-shopping-decisions-bcg-report/articleshow/126375316.cms",
+        "title": "India emerges as global leader in GenAI adoption for shopping decisions: BCG Report",
+        "link": "https://economictimes.indiatimes.com/tech/technology/india-emerges-as-global-leader-in-genai-adoption-for-shopping-decisions-bcg-report/articleshow/126375316.cms",
+        "published": "Tue, 06 Jan 2026 18:36:11 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "BCG notes that shopping has become the third most common use case for GenAI, extending beyond big-ticket items to everyday purchases such as groceries. Overall, the use of GenAI for shopping-related activities rose by 35% between February and November 2025, reflecting growing consumer confidence in AI-driven recommendations."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/grok-obscene-ai-content-govt-gives-x-time-till-jan-7-to-submit-report/articleshow/126375176.cms",
+        "title": "Grok obscene AI content: Govt gives X time till Jan 7 to submit report",
+        "link": "https://economictimes.indiatimes.com/tech/technology/grok-obscene-ai-content-govt-gives-x-time-till-jan-7-to-submit-report/articleshow/126375176.cms",
+        "published": "Tue, 06 Jan 2026 18:30:55 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "In a recent development, the Indian government has extended the deadline for social media platform X to address issues surrounding explicit content produced by its AI, Grok. X is now required to furnish a comprehensive report by January 7."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/grab-acquires-ai-robotics-firm-infermove-to-boost-delivery-capabilities/articleshow/126374890.cms",
+        "title": "Grab acquires AI robotics firm Infermove to boost delivery capabilities",
+        "link": "https://economictimes.indiatimes.com/tech/startups/grab-acquires-ai-robotics-firm-infermove-to-boost-delivery-capabilities/articleshow/126374890.cms",
+        "published": "Tue, 06 Jan 2026 18:14:29 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Grab Holdings has acquired Infermove, a Chinese AI robotics firm. This move aims to boost the former's first and last-mile delivery services. Grab plans to develop Infermove's solutions further in Singapore."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/ces-2026-the-technologies-defining-the-year-ahead/articleshow/126374139.cms",
+        "title": "CES 2026: The technologies defining the year ahead",
+        "link": "https://economictimes.indiatimes.com/tech/technology/ces-2026-the-technologies-defining-the-year-ahead/articleshow/126374139.cms",
+        "published": "Tue, 06 Jan 2026 17:35:51 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Nvidia, AMD and Intel all had important chip and AI platform announcements on the first day of CES 2026, but all audiences wanted to see more of was Star Wars and Jensen Huang's little robot buddies."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/lvx-recorded-25-exits-80-transactions-2025",
+        "title": "LVX records over 25 exits and over 80 transactions in 2025",
+        "link": "https://yourstory.com/2026/01/lvx-recorded-25-exits-80-transactions-2025",
+        "published": "Tue, 06 Jan 2026 10:12:44 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The firm had recently rebranded from LetsVenture and expanded into growth stage deal making. According to its annual report, the firm saw 15% of all transactions happening at the growth stage."
+    },
+    {
+        "id": "https://inc42.com/buzz/delhi-ncr-startup-funding-holds-steady-at-2-2-bn-in-2025/",
+        "title": "Delhi NCR Startup Funding Holds Steady At $2.2 Bn In 2025",
+        "link": "https://inc42.com/buzz/delhi-ncr-startup-funding-holds-steady-at-2-2-bn-in-2025/",
+        "published": "Tue, 06 Jan 2026 13:04:32 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Delhi NCR Startup Funding Holds Steady At $2.2 Bn In 2025\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Delhi-NCR-AFR-2025-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Delhi NCR continued to be one of the leading startup hubs of India in 2025, with investors continuing to back&#8230;"
+    },
+    {
+        "id": "https://inc42.com/buzz/rajasthan-digifest-x-tgs-2026-day-2-puts-job-creation-at-centre-calls-for-india-first-innovation/",
+        "title": "Rajasthan DigiFest X TGS 2026 Day 2 Puts Job Creation At Centre, Calls For India-First Innovation",
+        "link": "https://inc42.com/buzz/rajasthan-digifest-x-tgs-2026-day-2-puts-job-creation-at-centre-calls-for-india-first-innovation/",
+        "published": "Tue, 06 Jan 2026 12:47:07 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Rajasthan DigiFest X TGS 2026 Day 2 Puts Job Creation At Centre, Calls For India-First Innovation\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/TGS-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />The second day of the Rajasthan DigiFest X TiE Global Summit 2026 shifted focus to employment generation, with TiE announcing&#8230;"
+    },
+    {
+        "id": "https://inc42.com/buzz/crypto-startup-speed-bags-8-mn-to-fuel-global-expansion/",
+        "title": "Crypto Startup Speed Bags $8 Mn To Fuel Global Expansion",
+        "link": "https://inc42.com/buzz/crypto-startup-speed-bags-8-mn-to-fuel-global-expansion/",
+        "published": "Tue, 06 Jan 2026 12:38:06 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Crypto Startup Speed Bags $8 Mn To Fuel Global Expansion\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/02/CBIC-crypto-featured-.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Blockchain payment platform Speed has raised $8 Mn (INR 72.1 Cr) in a funding round led by global stablecoin network&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-alexa-beyond-voice-alexa-com-browser-interface/",
+        "title": "Amazon Brings Alexa+ to the Web With Alexa.com Browser Interface: What This Means",
+        "link": "https://www.medianama.com/2026/01/223-alexa-beyond-voice-alexa-com-browser-interface/",
+        "published": "Tue, 06 Jan 2026 12:24:22 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>The shift in Alexa from just an Echo device to a browser interface with Alexa.com changes how it's used, especially at a time when OpenAI is moving towards audio-first devices. </p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-alexa-beyond-voice-alexa-com-browser-interface/\">Amazon Brings Alexa+ to the Web With Alexa.com Browser Interface: What This Means</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
